# fast-molmobot

./: .gitignore  README.md  pyproject.toml  run_benchmark.py  run_sim_eval.sh  setup_sim_eval.sh  test_lossless.py
molmobot_fast/: __init__.py  benchmark.py  engine.py  patches.py  profiler.py
